# cudaservice

./: CMakeLists.txt  CudaServiceVersion.h  NOTICE  README.md
cmake/: CudaServiceCPack.cmake  CudaServiceConfig.cmake.in  CudaServiceCreateConfig.cmake
cudaservice/: CMakeLists.txt
cudaservice/include/cudaservice/task_service/: thread_pool.h
cudaservice/src/: cudaMatOps_PortableUma.cu  cudaMatOps_concurrent.cu  cudaMatOps_hemi.cu  cudaMatOps_rawPortable+uma.cpp  cudaMatOps_uma.cu  cuda_runtimePortable+uma.cu  cuda_runtimePortable_dynamicPol.cu  service_staticPolym.cu  stream_ops_concurrent.cu
cudaservice/test/: CMakeLists.txt
cudaservice/test/task_service/: test_threadPool_CUDAtask.cu  test_threadPool_simple.cpp  threadPool_example.cpp  time_task_launch.cpp
doc/: Doxyfile.in
